fix header alignment padding

--- a/style.css
+++ b/style.css
@@ -1,22 +1,24 @@
 body {
     font-family: sans-serif;
     margin: 0;
+    padding:0;
 }
 
 header {
     background: #1F2937;
     color: #F9FAF8;
-    padding: 24px 150px;
-}
+    padding: 0 150px;
+ }
 
 nav {
     display: flex;
     justify-content: space-between;
+    align-items: center;
 }
 
 nav li {
     list-style: none;
-    padding: 12px;
+    padding: 0 12px;
 }
 
 .rightmenu ul {
